cmake_minimum_required(VERSION 3.8)
project(srpp_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Models.msg"
  "msg/Referee.msg"
  "msg/GimbalCmd.msg"
  "msg/GimbalVelocity.msg"
  "msg/GimbalPosition.msg"

  
  "msg/RobotStateInfo.msg"

  DEPENDENCIES
    std_msgs
    geometry_msgs
)


ament_package()
